--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Ryan Stevens",
-  "name": "assasin",
-  "description": "Find Your Target, Plant a land mine",
+  "name": "BrowServer",
+  "description": "Launch a web server in your browser!",
   "version": "0.0.0",
   "repository": {
     "url": ""
