First real checkin

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Ryan Stevens",
-  "name": "BrowServer",
+  "name": "Mocker",
   "description": "Launch a web server in your browser!",
   "version": "0.0.0",
   "repository": {
